Refactored Admin module